Fix a problem in font sizes that made one badge's text fall out of the box

--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ footer
 		{
 			font-size: 0.9em;
 			color: #efefef;
-			width: 11em;
+			width: 11.5em;
 			border-radius: .4em;
 			background: rgba(239, 239, 239, 0.3);
 			padding: .3em .5em;
